--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "license": "Apache-2.0",
   "scripts": {
     "start": "node server.js",
-    "watch": "concurrently --handle-input npm:watch-css npm:watch-server",
+    "watch": "concurrently --handle-input npm:watch-css npm:watch-js npm:watch-server",
     "watch-server": "node --watch server.js | pino-pretty",
-    "watch-css": "cssn --watch public/pinkgill.css public/pinkgill.min.css"
+    "watch-js": "./build.js --watch",
+    "build-js": "./build.js",
+    "watch-css": "NODE_ENV=production cssn --watch public/pinkgill.css public/pinkgill.min.css"
   },
   "bin": {},
   "repository": {
@@ -40,6 +42,7 @@
     "@shoelace-style/shoelace": "^2.16.0",
     "concurrently": "^9.0.0",
     "cssn": "^4.1.0",
+    "esbuild": "^0.23.1",
     "eslint": "^8.26.0",
     "pino-pretty": "^11.2.2"
   }
