--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "rules": {}
   },
   "dependencies": {
+    "@nanostores/lit": "^0.2.2",
     "@ngrok/ngrok": "^1.4.1",
     "express": "^4.20.0",
+    "iron-session": "^8.0.3",
+    "lit": "^3.2.0",
+    "nanostores": "^0.11.3",
     "pino": "^9.4.0"
   },
   "devDependencies": {
