--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nanostores/lit": "^0.2.2",
     "@ngrok/ngrok": "^1.4.1",
     "better-sqlite3": "^11.3.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.20.0",
     "iron-session": "^8.0.3",
     "kysely": "^0.27.4",
