--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@atproto/identity": "^0.4.1",
     "@atproto/lexicon": "^0.4.1",
     "@atproto/oauth-client-node": "^0.1.0",
+    "@atproto/sync": "^0.1.1",
     "@atproto/syntax": "^0.3.0",
     "@nanostores/lit": "^0.2.2",
     "better-sqlite3": "^11.3.0",
