--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "multer2": "^1.1.1",
     "nanostores": "^0.11.3",
     "pino": "^9.4.0",
-    "wasmagic": "^1.0.2"
+    "wasmagic": "^1.0.2",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@atproto/lex-cli": "^0.5.0",
