--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "esbuild": "^0.23.1",
     "eslint": "^8.26.0",
     "nodemon": "^3.1.7",
-    "pino-pretty": "^11.2.2"
+    "pino-pretty": "^11.2.2",
+    "timeago.js": "^4.0.2"
   }
 }
