--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@atproto/sync": "^0.1.1",
     "@atproto/syntax": "^0.3.0",
     "@nanostores/lit": "^0.2.2",
+    "@nanostores/router": "^0.16.1",
     "better-sqlite3": "^11.3.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.20.0",
